@@ -7,6 +7,7 @@ no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
 in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
+* [2018-01-09] RFC4880: added AsymmetricSignRSA() and AsymmetricVerifyRSA()
 * [2017-12-23] release 1.3.9 of LibTMCG
 * [2017-12-19] RFC4880: fixes bad interpretation of subpacket length encoding
 * [2017-12-17] RFC4880: fixes missing hash truncation in AsymmetricVerifyDSA()
